        changing the cursor position
    Note that these are not available when light pen emulation - which
    also uses the mouse - is enabled.
  * new command line option (-keybuf) for typing text of any length at
    startup; the text can also be read from a file
  * added machine configuration option to control the SID output volume;
    this also affects the sound recorded to AVI files
  * increased TED audio output level relative to the default SID output
    level, for better accuracy in programs that use both types of sound
    at the same time
  * minor sound emulation fixes
  * some utility improvements: 'compress' has more options now, and is
    optimized somewhat for slightly better efficiency and speed;
    'p4fliconv' automatically detects the use of the C64 palette in GIF
    files and enables pixel exact reading mode, and there is a new
    experimental hires conversion algorithm as well
  * minor TED emulation optimizations
  * a few Linux compile and link errors have been fixed

Changes in version 1.2.6.1
--------------------------

  * fixed bug in changing the type of a floppy drive with no image file
    selected
  * fixed link errors when building from source code on Linux

Changes in version 1.2.6
------------------------

  * implemented IEC level floppy drive emulation; this allows access to
    a directory on the PC filesystem, and supports reading and writing
    .prg, .p00, .s00, .u00, and .r00 files, and some commonly used CBM
    DOS commands
  * the debugger window now displays the current state of TED registers
  * on Windows and MacOS X the native file selection dialog is used
    instead of the FLTK one; also, the last PRG and screenshot file
    selected is remembered by the dialogs
  * various improvements have been made to the utilities
  * changed the TED luminance table to (hopefully) match the colors of
    the real machine more accurately
  * when recording video to AVI files in RLE8 format, some TV emulation